# hexlet_pytest

./: .gitignore  pyproject.toml
hexlet_pytest/: example.py
tests/: test_example.py
