[tool.poetry]
name = "hexlet-pytest"
version = "0.1.0"
description = ""
authors = ["Семен Серов <sserov@astralinux.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
